# SmallKolokvium

./: .gitignore  Теория 1.txt
KolokCode/: CMakeLists.txt
KolokCode/tests/: tests.cpp
KolokCode2/: CMakeLists.txt  README.md
KolokCode2/KolokCode2/: CMakeLists.txt  main.cpp
KolokCode2/KolokCode2/include/: Task.h  TaskService.h  httplib.h
KolokCode2/KolokCode2/src/: TaskService.cpp
KolokCode2/KolokCode2/tests/: tests.cpp
